rename to new version, fix sound error, fix off error, remove console logs

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <source src='sounds/simonSound4.mp3'/>
   </audio>
 <div class="about">Created by <a href="http://codepen.io/andrewrmorgan/" target="AndrewRMorgan">AndrewRMorgan</a></div>
-  <script type='text/javascript' src='scripts/main.js'></script>
+  <script type='text/javascript' src='scripts/main.1.1.js'></script>
 </body>
 
 </html>
